# teste-bringel

./: .dockerignore  .gitignore  Dockerfile  README.md  dev.env  docker-compose.yml  locustfile.py  pyproject.toml
.github/workflows/: django.yml
apps/authentication/: admin.py  authentication.py  forms.py  models.py  schema.py  serializers.py  urls.py  views.py
apps/authentication/migrations/: 0001_initial.py  0002_alter_customer_options.py  0003_alter_customer_options.py
apps/authentication/tests/: __init__.py  authentication_viewset_tests.py  createsupercustomer_test.py  customer_serializer_tests.py  customer_viewset_tests.py
apps/authentication/views/: __init__.py  authentication_viewset.py  customer_viewset.py  token_api_view.py
apps/cart/: admin.py  models.py  serializers.py  urls.py  views.py
apps/cart/migrations/: 0001_initial.py  0002_remove_cart_products_cart_product_and_more.py
apps/cart/tests/: __init__.py  cart_serializer_tests.py  sale_serializer_tests.py
apps/products/: admin.py  models.py  serializers.py  tasks.py  urls.py  utils.py  views.py
apps/products/migrations/: 0001_initial.py  0002_remove_supplier_product_product_supplier_and_more.py  0003_alter_pricehistory_end_alter_supplier_name_and_more.py  0004_alter_pricehistory_options_alter_product_options_and_more.py  0005_alter_pricehistory_options.py
apps/products/models/: __init__.py  price_history.py  product.py  review.py  supplier.py  tag.py
apps/products/serializers/: __init__.py  (+5 more)
apps/spectacular_swagger/: apps.py  urls.py
core/: celery.py  settings.py  urls.py
(+13 files in other folders)
