[tool.poetry]
name = "teste-bringel"
version = "0.1.0"
description = ""
authors = ["weblerson <zonejr4@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.1"
djangorestframework = "^3.14.0"
django-oauth-toolkit = "^2.3.0"
python-decouple = "^3.8"
djangorestframework-simplejwt = "^5.3.1"
celery = {extras = ["redis"], version = "^5.3.6"}
drf-spectacular = "^0.27.1"
locust = "^2.20.1"
faker = "^22.5.0"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
